Add chunked video upload edge function with Cloudinary integration
- Created upload-video edge function for large file uploads (up to 500MB)
- Implements chunked upload with 10MB chunks
- Multi-account Cloudinary load balancing
- Server-side processing to solve CORS issues
- Added VS Code Deno configuration
- Updated environment variables for server-side Cloudinary credentials

--- a/.env
+++ b/.env
@@ -33,6 +33,19 @@ VITE_CLOUDINARY_API_KEY_3=883329129344422
 VITE_CLOUDINARY_API_SECRET_3=35ZUKtFhWwnjRw8kBUsbBrhAyRI
 VITE_CLOUDINARY_UPLOAD_PRESET_3=LEARNOVA
 
+# Server-side Cloudinary credentials (without VITE_ prefix)
+CLOUDINARY_CLOUD_NAME_1=dn3tms3dw
+CLOUDINARY_API_KEY_1=615754297337952
+CLOUDINARY_API_SECRET_1=xKpedAwHRv9VSjCAOzJ4FuZ35GI
+
+CLOUDINARY_CLOUD_NAME_2=deu8jbm6z
+CLOUDINARY_API_KEY_2=863312634614729
+CLOUDINARY_API_SECRET_2=XRGfxK5nSTkgPGt-CMucrRd88Tw
+
+CLOUDINARY_CLOUD_NAME_3=dab5orx8x
+CLOUDINARY_API_KEY_3=883329129344422
+CLOUDINARY_API_SECRET_3=35ZUKtFhWwnjRw8kBUsbBrhAyRI
+
 VITE_CLOUDINARY_CLOUD_NAME_4=your_cloud_name_4
 VITE_CLOUDINARY_API_KEY_4=your_api_key_4
 VITE_CLOUDINARY_API_SECRET_4=your_api_secret_4
