Implement secure YouTube video system
- Add JWT token-based video access control with 5-minute expiry
- Create SecureVideoPlayer with watermark overlay and anti-piracy features
- Add YouTubeVideoInput component for teachers to add video URLs
- Update database schema with youtube_video_id and youtube_video_url fields
- Create video_access_tokens table for token tracking and analytics
- Add comprehensive security: domain validation, enrollment checks, disabled shortcuts
- Replace Cloudinary system to eliminate file size limits and reduce costs
- Add lesson page with secure video player integration
- Include complete documentation and deployment instructions

--- a/.env
+++ b/.env
@@ -46,6 +46,9 @@ CLOUDINARY_CLOUD_NAME_3=dab5orx8x
 CLOUDINARY_API_KEY_3=883329129344422
 CLOUDINARY_API_SECRET_3=35ZUKtFhWwnjRw8kBUsbBrhAyRI
 
+# JWT Secret for Video Token Security
+JWT_SECRET=learnova-super-secure-jwt-secret-key-2024-change-in-production
+
 VITE_CLOUDINARY_CLOUD_NAME_4=your_cloud_name_4
 VITE_CLOUDINARY_API_KEY_4=your_api_key_4
 VITE_CLOUDINARY_API_SECRET_4=your_api_secret_4
